# e-commerce-platform

./: .gitignore  README.md  docker-compose.yml
services/: pyproject.toml  requirements-all.txt
services/api-gateway/: README.md
services/api-gateway/app/: main.py
services/api-gateway/middleware/: auth.py
services/api-gateway/services/: inventory_service.py  order_service.py  payment_service.py  product_service.py  user_service.py
services/api-gateway/utils/: http_client.py
services/inventory-service/: README.md
services/inventory-service/alembic/: env.py
services/inventory-service/alembic/versions/: b19e7b504183_init_inventory.py
services/inventory-service/app/: database.py  main.py
services/inventory-service/app/models/: inventory.py
services/inventory-service/app/routers/: inventory_router.py
services/inventory-service/app/schemas/: inventory.py
services/inventory-service/app/services/: inventory_service.py
services/order-service/: README.md
services/order-service/alembic/: env.py
services/order-service/app/: config.py  database.py  main.py
services/payment-service/: README.md
services/payment-service/alembic/: env.py
services/payment-service/app/: database.py  main.py
services/product-service/: README.md  alembic.ini
services/product-service/alembic/: env.py  script.py.mako
services/product-service/app/: database.py  main.py
services/user-service/: README.md
services/user-service/alembic/: env.py  script.py.mako
services/user-service/app/: database.py  main.py
services/user-service/tests/: test_users.py  test_utils.py
(+29 files in other folders)
